# rag-youtube

./: config.py  llamaindex.py  main.py  pyproject.toml  rag.py
chroma_data/: chroma.sqlite3
chroma_data/idx_084be1164b972379/: chroma.sqlite3
chroma_data/idx_0a9d8da1f2a69510/: chroma.sqlite3
chroma_data/idx_1ad2ac778b14978a/: chroma.sqlite3
chroma_data/idx_294b8313e07cd4b3/: chroma.sqlite3
chroma_data/idx_430969d33d028633/: chroma.sqlite3
chroma_data/idx_567904e2227934da/: chroma.sqlite3
chroma_data/idx_92eb13e939181359/: chroma.sqlite3
chroma_data/idx_9b839b06296d404a/: chroma.sqlite3
chroma_data/idx_e6389fbe30d4c615/: chroma.sqlite3
manifests/: manifest_0d80ce2b3fea4ff1a0f0e46c2a075970.json  manifest_11bfae3347524f2b9700ceac6248f510.json  manifest_240d5855af2e49c396bb8224108da369.json  manifest_3055d3f627224c27a5f27df848e5acd4.json  manifest_391f6b84742b4a698031862b1ee66ef0.json  manifest_3d885e8b2ae34e7c93b82bd494e9bcfe.json  manifest_49c71bb262ef417784558289cfac3fbe.json  manifest_6378298d1fba44348603571f17ccb373.json  manifest_9e93852dfe3b4324ae28b74219e3834d.json  manifest_c509ee1c2bfc4ee8a4d1b03e3893ff81.json  manifest_dcf8a30c029e4ecb887da86f9bcb5c6e.json  manifest_e5b14b26d86642758baf8c7ac787863e.json
